2016-04-23 21:06  chrox

	* add support for firmware version 5.7.4

2015-12-02 19:23  chrox

	* add support for firmware version 5.6.5

2015-05-16 17:19  chrox

	* add support for firmware version 5.6.2

2015-04-15 10:57  chrox

	* add whisper touch support for Kindle Voyage

2014-11-27 20:32  chrox

	* add support for firmware version 5.6.1

2014-11-21 10:32  chrox

	* add support for Kindle Basic & Voyage

2014-10-11 14:29  chrox

	* add support for more models of PaperWhite 2

2014-03-09 01:41  chrox

	* add support for Kindle PaperWhite 5.4.4

2013-12-01 17:56  chrox

	* add more models support for PaperWhite 2

2013-11-21 16:44  chrox

	* add support for PaperWhite 2

2013-08-11 23:41  chrox

	* disable dictionary backend

2013-07-12 21:14  chrox

	* keep current location of native doc browser when launching koreader

2013-06-13 16:29  chrox

	* add booklet counter to avoid blank screen

2013-04-25 17:16  chrox

	* add dictionary backend for 5.3.5

2013-04-21 16:41  chrox

	* enable pillow after starting koreader

2013-04-21 15:47  chrox

	* add dictionary backend for 5.3.4

2013-04-16 15:13  chrox

	* bugfix parsing float string from certain locales

2013-03-20 18:27  chrox

	* add support for KOReader

2013-01-27 18:27  chrox

	* add support for Japanese and Canadian 3G PaperWhite

2013-01-21 17:53  chrox

	* add a lipc interface on dictionary backend

2013-01-21 00:11  chrox

	* open txt and html documents with native reader

2013-01-20 23:12  chrox

	* add dictionary backend

2013-01-17 17:35  chrox

	* add detail view for additional document formats

2013-01-11 21:43  chrox

	* add a backdoor to native PDF reader

2013-01-09 19:25  chrox

	* use enumeration approach to find request method

2013-01-08 10:27  chrox

	* bugfix booklet handler for Kindle Touch

2013-01-07 23:13  chrox

	* add extractors for Kindle Touch

2013-01-07 17:16  chrox

	* build update for Kindle Touch 5.1.2

2013-01-07 00:02  chrox

	* build update for Kindle Paperwhite 5.3.1
