@@ -1,3 +1,8 @@
+2016-07-17 13:53  chrox
+
+	* check new document settings path for updating progress and possibly add
+    support for Kindle Oasis
+
 2016-04-23 21:06  chrox
 
 	* add support for firmware version 5.7.4
